<?xml version="1.0"?>
<package format="2">
	<name>dr_ensenso</name>
	<version>0.0.2</version>
	<description>The dr_ensenso package</description>

	<maintainer email="j.c.gaiser@delftrobotics.com">Hans Gaiser</maintainer>

	<license>Apache v2.0</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>pcl_conversions</depend>
	<depend>pcl_ros</depend>
	<depend>eigen</depend>
	<depend>libopencv-dev</depend>
</package>
