<?xml version="1.0"?>
<package format="2">
	<name>dr_ensenso</name>
	<version>0.2.11</version>
	<description>The dr_ensenso package</description>

	<maintainer email="j.c.gaiser@delftrobotics.com">Hans Gaiser</maintainer>

	<license>Apache v2.0</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>eigen</depend>
	<depend>ensenso-sdk</depend>
	<depend>libopencv-dev</depend>
	<depend>jsoncpp</depend>

	<depend>estd</depend>
	<depend>roscpp</depend>
</package>
