<?xml version="1.0"?>
<package format="2">
	<name>dr_ensenso</name>
	<version>1.5.0</version>
	<description>The dr_ensenso package</description>

	<maintainer email="j.c.gaiser@delftrobotics.com">Hans Gaiser</maintainer>

	<license>Apache v2.0</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>dr_util</depend>
	<depend>eigen</depend>
	<depend>ensenso-sdk</depend>
	<depend>estd</depend>
	<depend>fmt</depend>
	<depend>libopencv-dev</depend>
	<depend>libpcl-all-dev</depend>
	<depend>jsoncpp</depend>

</package>
